tests/errors/from_base64_invalid.dang
let bad = "!!!".fromBase64
print(bad)
